<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/backBtn"
            android:src="@drawable/logo_purple"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/add_a_new_category"
            android:textColor="@color/white"
            android:textSize="28sp"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="230dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_category"
            android:drawablePadding="10dp"
            android:hint="@string/category_title"
            android:inputType="textPersonName|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTextInput"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button01"
        android:text="@string/submit"
        android:textColor="@color/white"/>

</RelativeLayout>