<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboard"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/subTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTextView"
            android:text="abc@example.com"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_logout"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"/>


    </RelativeLayout>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_category"
        android:hint="@string/search"
        android:padding="10dp"
        android:textColorHint="@color/grey1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomL"
        android:layout_below="@+id/searchEditText"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_category" />

    <LinearLayout
        android:id="@+id/bottomL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="@string/add_category"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:backgroundTint="@color/purple_200"
            app:fabCustomSize="50dp"
            android:tint="@color/white"/>

    </LinearLayout>


</RelativeLayout>