<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <RelativeLayout-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="140dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/grey2"/>-->

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/shape_button04"
            android:src="@drawable/ic_baseline_menu_book_24"/>

        </RelativeLayout>

    <TextView
        android:id="@+id/bookTextView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/deleteBtn"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/moreBtn"
        android:maxLines="1"
        android:textColor="@color/grey"
        android:text="@string/book_title"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookTextView"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="60dp"
        android:ellipsize="end"
        android:layout_toEndOf="@id/deleteBtn"
        android:maxLines="4"
        android:textColor="@color/grey"
        android:text="@string/book_description"/>

    <TextView
        android:id="@+id/categoryTextView"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="300dp"
        android:textColor="@color/purple_200"
        android:maxLines="1"
        android:text="@string/category"/>

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/deleteBtn"
        android:layout_marginTop="100dp"
        android:labelFor="@+id/ratingTextView"
        android:layout_marginLeft="110dp"
        android:text="Rating: "/>

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/deleteBtn"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="160dp"
        android:text="@string/rating"/>


    <ImageButton
        android:id="@+id/moreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_more_vert"
        android:layout_marginLeft="360dp"
        android:padding="5dp"
        android:background="@android:color/transparent"/>


    <!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_marginBottom="5dp"-->
<!--    app:cardUseCompatPadding="true"-->
<!--    app:cardCornerRadius="0dp"-->
<!--    app:cardElevation="0dp"-->
<!--    app:cardBackgroundColor="@color/white"-->
<!--    app:contentPadding="10dp">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_gravity="center_vertical"-->
<!--        android:orientation="horizontal">-->

<!--        <TextView-->
<!--            android:id="@+id/bookTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_marginStart="0dp"-->
<!--            android:layout_marginTop="-40dp"-->
<!--            android:layout_weight="1"-->
<!--            android:textSize="16sp"-->
<!--            android:text="@string/book_title"-->
<!--            android:textColor="@color/black" />-->

<!--        <TextView-->
<!--            android:id="@+id/descriptionTextView"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginStart="-95dp"-->
<!--            android:layout_marginTop="36dp"-->
<!--            android:layout_marginBottom="-2dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/book_description"-->
<!--            android:textSize="12sp"-->
<!--            android:textColor="@color/black" />-->

<!--        <TextView-->
<!--            android:id="@+id/ratingTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginStart="-340dp"-->
<!--            android:layout_marginTop="100dp"-->
<!--            android:layout_marginBottom="-2dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/rating"-->
<!--            android:textSize="12sp"-->
<!--            android:textColor="@color/purple_200" />-->

<!--        <TextView-->
<!--            android:id="@+id/categoryTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginBottom="-2dp"-->
<!--            android:layout_marginEnd="50dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/category"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/deleteBtn"-->
<!--            android:layout_width="40dp"-->
<!--            android:background="@drawable/shape_button03"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginEnd="-44dp"-->
<!--            android:src="@drawable/ic_book"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/moreBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="70dp"-->
<!--            android:src="@drawable/ic_more"/>-->

<!--    </LinearLayout>-->
</androidx.cardview.widget.CardView>