<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_margin="18dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            />

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo_purple"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/backBtn"/>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_book"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/iconImageView"
            android:textSize="28sp"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        app:hintEnabled="false">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_book_grey"
        android:hint="@string/book_title"
        android:background="@drawable/shape_edittext01"
        android:drawablePadding="10dp"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/titleTextInput"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_book_grey"
            android:hint="@string/book_description"
            android:background="@drawable/shape_edittext01"
            android:drawablePadding="10dp"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey1"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextInput"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_edittext01"
        android:drawableStart="@drawable/ic_category"
        android:drawableEnd="@drawable/ic_arrow_down_grey"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="Book category"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/grey1"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfPagesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/categoryTextView"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/numberOfPagesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_book_grey"
            android:hint="Number of pages"
            android:background="@drawable/shape_edittext01"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey1"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/isReadCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/numberOfPagesTextInput"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:text="Is read"
        android:textColor="@color/grey1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ratingTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/isReadCheckbox"
        android:layout_marginTop="5dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/ratingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_book_grey"
            android:hint="My rating of the book"
            android:background="@drawable/shape_edittext01"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey1"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <NumberPicker-->
<!--        android:id="@+id/numberPicker"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_below="@+id/isReadCheckbox"-->
<!--        android:layout_marginStart="30dp"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/numberOfPages"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_toRightOf="@+id/numberPicker"-->
<!--        android:layout_below="@id/isReadCheckbox"-->
<!--        android:text="@string/my_rating"-->
<!--        android:textColor="@color/grey1"-->
<!--        android:paddingTop="10dp"/>-->

<!--    <ImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_below="@id/ratingTextInput"-->
<!--        android:layout_marginStart="30dp"/>-->

<!--    <Button-->
<!--        android:id="@+id/addImageBtn"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_below="@id/ratingTextInput"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_toRightOf="@id/image"-->
<!--        android:text="Upload image"-->
<!--        android:textSize="8sp"-->
<!--        android:backgroundTint="@color/purple_200"-->
<!--        />-->


    <Button
        android:id="@+id/addBookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingTextInput"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:text="Add book"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>